hphp/test/slow/global_func/meth_caller/meth_caller.php.expectf
int(1)
int(4)
int(6)
int(8)
int(9)
int(10)

Fatal error: Uncaught exception 'HH\InvariantException' with message 'object must be an instance of (D)' in %s/meth_caller.php:31
Stack trace:
#0 (): HH\invariant_violation()
#1 %s/meth_caller.php(31): MethCaller$D$dfunc()
#2 {main}
